# live-view-graphs

./: Cargo.toml  index.html
src/: main.rs
